Add @ArrayObfuscation, benchmarks, fix loadLibrary removal
- New: @ArrayObfuscation annotation (class/field/method level)
- Array blob encryption with direct C buffer access (9x speedup)
- Transpiler detects blob arrays, emits _narr_N[] direct reads
- Fix bench sources: remove manual System.loadLibrary calls
- Array methods registered first in JNI_OnLoad (avoid clinit race)
- Per-class array method numbering for multi-class JARs
- README: full 10-run benchmark averages
  PureBench: 2.8x faster than JVM (transpile -O3 -ffast-math)
  LoopBench: 2.4x overhead
  Calc: 8.8x (recursive + exceptions, interpreter)
  Array: 9x faster with blob vs per-element JNI