@@ -1,208 +1,146 @@
 # JNIC-zig
 
-JVM 字节码 Native 化工具，使用 Zig 编写。将带有 `@master.koitoyuu.Native` 注解的 Java/Kotlin 类方法转换为 native 实现，通过嵌入式字节码解释器在 C 层执行原始逻辑，防止反编译。
+JVM 字节码 Native 化保护工具，使用 Zig 编写。通过注解驱动，将 Java/Kotlin 方法转换为 native 实现，在 C 层执行原始逻辑，防止反编译。
 
 ## 功能
 
-- **字节码 Native 化** — 自动检测 `@Native` 注解，将方法体抽取到 native 库中
-- **嵌入式 JVM 解释器** — 生成的 C 代码包含完整的 JVM 字节码解释器，通过 JNI 回调 Java
-- **Main 方法保护** — 自动将 `main` 逻辑抽取到 `yuri$main`，注入 `System.loadLibrary`
-- **符号混淆 (Renamer)** — DLL 导出符号随机化为 IDA 风格（`sub_180005D70`）
-- **反调试** — 注入 `IsDebuggerPresent` / `ptrace` 检测
-- **水印** — 嵌入可追踪的水印字符串
-- **JAR-to-JAR** — 输入 JAR，输出保护后的 JAR + native 源码
+- **字节码 Native 化** — `@Native` 注解驱动，将方法体抽取到 native 库
+- **字符串/数字加密** — `@StringEncrypt` / `@NumberEncrypt`，多轮 Feistel + 动态密钥
+- **数组加密** — `@ArrayObfuscation`，大数组 blob 加密 + 直接 C 内存访问优化
+- **纯计算 Transpiler** — 无 JNI 的方法直接编译为优化 C 代码（-O3 -ffast-math）
+- **JNI Transpiler** — 有字段/方法调用的循环也可 transpile，内联 cached JNI ID
+- **Computed goto 解释器** — GCC `&&label` 扩展消除 switch 开销
+- **超级指令** — `iinc+goto` / `iload+iload+if_icmp` 合并为单条伪指令
+- **自动加载** — DLL 打包进 JAR，运行时自动解压加载（NativeLoader）
+- **符号混淆** — DLL 导出符号随机化为 IDA 风格（`sub_180005D70`）
+- **反调试** — IsDebuggerPresent / PEB / ptrace / 完整性校验
+- **动态密钥** — 每次构建唯一 salt → master_key，静态逆向无效
+- **双密钥模式** — `enchanted_encryption=true` 时 decode_key 隔离在 JAR
+- **注解清除** — `remove_jnic_annotation=true` 自动删除注解及 class 文件
+
+## 注解包
+
+```
+master.koitoyuu.jnic.Native            — 类级：native 化所有方法
+master.koitoyuu.jnic.StringEncrypt     — 类/方法/字段：字符串加密
+master.koitoyuu.jnic.NumberEncrypt     — 类/方法/字段：数字常量加密
+master.koitoyuu.jnic.ArrayObfuscation  — 类/方法/字段：数组 blob 加密
+```
 
 ## 快速开始
 
 ### 1. 添加注解
 
 ```java
-package master.koitoyuu;
-
-import java.lang.annotation.*;
-
-@Retention(RetentionPolicy.RUNTIME)
-@Target({ElementType.TYPE, ElementType.METHOD})
-public @interface Native {}
-```
-
-在需要保护的类或方法上添加 `@Native`：
-
-```java
-import master.koitoyuu.Native;
+import master.koitoyuu.jnic.*;
 
 @Native
+@StringEncrypt
+@NumberEncrypt
+@ArrayObfuscation
 public class MyClass {
-    public static void main(String[] args) {
-        // 自动抽取到 yuri$main 并 native 化
-    }
+    private static final int[] TABLE = {0x63, 0x7C, 0x77, ...};
 
-    private void secretLogic() {
-        // 将变为 native 方法
+    public static void main(String[] args) {
+        System.out.println("Hello");
     }
 }
 ```
 
-### 2. 配置
-
-创建 `config.toml`：
+### 2. 配置 `config.toml`
 
 ```toml
 [jnic-zig]
-watermark = "MyApp v1.0"
+watermark = "JNIC-zig"
 use_ffm = false
 anti_debug = true
 renamer = true
-input_jar = "./app.jar"
-output_jar = "./app-protected.jar"
+remove_jnic_annotation = true
+fast_math = true
+enchanted_encryption = false
+input_jar = "./input.jar"
+output_jar = "./out.jar"
 ```
 
-### 3. 运行混淆
+### 3. 运行
 
 ```bash
-jnic-zig --config config.toml
-```
+# 混淆
+zig build run
 
-输出：
-- `app-protected.jar` — native 化后的 JAR
-- `native_jni.c` — 需编译为动态库的 C 源码
-
-### 4. 编译 Native 库
-
-#### Windows
-
-```bash
+# 编译 native 库
 zig cc -shared -o jnic_native.dll native_jni.c ^
-    -I"%JAVA_HOME%/include" -I"%JAVA_HOME%/include/win32" -O2
+    -I"%JAVA_HOME%/include" -I"%JAVA_HOME%/include/win32" -O3 -ffast-math
+
+# 打包 DLL 进 JAR
+mkdir master\koitoyuu\jnic
+copy jnic_native.dll master\koitoyuu\jnic\
+jar uf out.jar master/koitoyuu/jnic/jnic_native.dll
+
+# 运行（无需手动 loadLibrary）
+java -jar out.jar
 ```
-
-#### Linux
-
-```bash
-zig cc -shared -fPIC -o libjnic_native.so native_jni.c \
-    -I"$JAVA_HOME/include" -I"$JAVA_HOME/include/linux" -O2
-```
-
-#### macOS
-
-```bash
-zig cc -shared -o libjnic_native.dylib native_jni.c \
-    -I"$JAVA_HOME/include" -I"$JAVA_HOME/include/darwin" -O2
-```
-
-### 5. 运行
-
-#### Windows
-
-```bash
-java -Xss4m --enable-native-access=ALL-UNNAMED ^
-    -Djava.library.path=. -jar app-protected.jar
-```
-
-#### Linux / macOS
-
-```bash
-java -Xss4m --enable-native-access=ALL-UNNAMED \
-    -Djava.library.path=. -jar app-protected.jar
-```
-
-## 从源码构建
-
-需要 [Zig 0.16+](https://ziglang.org/download/)：
-
-```bash
-zig build -Doptimize=ReleaseFast
-```
-
-产物在 `zig-out/bin/jnic-zig`。
-
-## 配置选项
-
-| 选项 | 类型 | 默认值 | 说明 |
-|------|------|--------|------|
-| `watermark` | string | `"JNIC-zig"` | 嵌入到 native 库中的水印字符串 |
-| `use_ffm` | bool | `false` | 使用 FFM API (Java 22+) 代替 JNI |
-| `anti_debug` | bool | `true` | 注入反调试检测代码 |
-| `renamer` | bool | `false` | 随机化 DLL 中的所有符号名（IDA 风格 `sub_180XXXXX`） |
-| `remove_native_annotation` | bool | `false` | 混淆后删除所有混淆注解 |
-| `fast_math` | bool | `false` | 启用 `-ffast-math` 浮点优化（SIMD 向量化，有微小精度差异） |
-| `input_jar` | string | `"./input.jar"` | 输入 JAR 路径 |
-| `output_jar` | string | `"./output.jar"` | 输出 JAR 路径 |
 
 ## 性能基准测试
 
-所有测试开启 `@Native` + `@StringEncrypt` + `@NumberEncrypt`，使用 `-O3` 编译 native 库。
+环境：Windows 11, Java 26, Zig 0.16, AMD Ryzen (10 次取平均)
 
-### 纯计算方法（自动 Transpile 为 C）
+### PureBench（纯计算：int/long/bitwise/nested 循环）
 
-纯计算方法（无方法调用、无对象操作）被直接翻译为等价 C 代码，由 C 编译器 -O3 优化。
-`@NumberEncrypt` 加密后的 `int` / `long` / `float` / `double` 常量在 Transpile 路径中会被内联解密为 C 常量，不产生 JNI 回调开销。
+| | JVM (无混淆) | JNIC (transpiled -O3) | 比率 |
+|---|---|---|---|
+| 平均耗时 | 43.2ms | **15.5ms** | **0.36x (快 2.8 倍)** |
 
-| 测试项 | Java JIT | Native (Transpile) | 比率 |
-|--------|----------|-------------------|------|
-| Int 算术 (10M iter) | 27ms | **3ms** | **9x 更快** |
-| Long 算术 (5M iter) | 13ms | **4ms** | **3x 更快** |
-| 位运算 (10M iter) | 18ms | **9ms** | **2x 更快** |
-| 嵌套循环 (1K×1K) | 4ms | **0ms** | **>4x 更快** |
-| **合计** | **62ms** | **16ms** | **3.9x 更快** |
+> 纯计算方法走 transpile 路径，直接编译为 C 并启用 -O3 + -ffast-math，性能超越 JVM JIT。
 
-### Float / Double 纯计算（Transpile + fast_math）
+### Calc（递归 + try/catch + 加密常量）
 
-开启 `fast_math = true` 后，C 编译器可使用 SIMD/AVX 向量化浮点循环，性能远超 JIT。
+| | JVM (无混淆) | JNIC (interpreter) | 比率 |
+|---|---|---|---|
+| 平均耗时 | 31.9ms | 282.1ms | 8.8x |
 
-| 测试项 | Java JIT | Native `-O3` | Native `-O3 -ffast-math` | 比率 |
-|--------|----------|-------------|-------------------------|------|
-| Float 算术 (10M iter) | 12ms | 19ms | **1ms** | **12x 更快** |
-| Double 算术 (10M iter) | 13ms | 16ms | **1ms** | **13x 更快** |
-| **合计** | **25ms** | **35ms** | **2ms** | **12.5x 更快** |
+> 递归密集型 + 异常表方法走解释器路径，内联加密常量解密。
 
-> 注意：`-ffast-math` 允许浮点运算重排，会产生微小精度差异（第7-8位有效数字），对绝大多数应用无影响。
+### LoopBench（for/while/nested/string concat 循环）
 
-### 混合方法（解释器 + JNI 回调）
+| | JVM (无混淆) | JNIC (interpreter + concat) | 比率 |
+|---|---|---|---|
+| 平均耗时 | 17.0ms | 40.7ms | 2.4x |
 
-包含方法调用的方法走 JVM 字节码解释器。
+> 包含 invokedynamic 字符串拼接的循环走解释器，computed goto + 超级指令优化。
 
-| 测试项 | Java JIT | Native (Interpreter) | 比率 |
-|--------|----------|---------------------|------|
-| For 循环 (1M) | 1ms | 17ms | 17x |
-| While 循环 (1M) | 3ms | 27ms | 9x |
-| 字符串拼接 (1K次) | 8ms | **3ms** | **2.7x 更快** |
-| 嵌套循环 (1K×1K) | 3ms | 19ms | 6x |
-| **合计** | **15ms** | **66ms** | **4.4x** |
+### ArrayBench（数组 blob 加密 + 直接 C 内存访问）
 
-### 加密常量访问
+| | 逐元素 JNI 访问 | 直接 C 数组访问 | 提升 |
+|---|---|---|---|
+| 1M 次迭代 | 1720ms | **190ms** | **9x** |
 
-`@StringEncrypt` / `@NumberEncrypt` 注解的常量在 native 层 XOR 加密存储。`@NumberEncrypt` 支持 `int`、`long`、`float`、`double`；纯计算 Transpile 方法会直接内联解密后的数值，解释器路径会通过 native lookup 解密。
+> `@ArrayObfuscation` 数组加密后，transpiled 方法通过 `_narr_N[]` 直接读取 C 缓冲区，零 JNI 开销。
 
-| 测试项 | Java JIT | Native (加密 + 解密) | 比率 |
-|--------|----------|---------------------|------|
-| 5×int + 5×long + 5×String 字段访问 | 20ms | **1ms** | **20x 更快** |
+### 总结
 
-### 完整 Obfuscator Test Suite
+| 方法类型 | 保护方式 | 性能开销 |
+|---|---|---|
+| 纯计算（无 JNI） | Transpile → C (-O3) | **负开销（比 JVM 快）** |
+| 循环 + 字段/方法 | Interpreter + computed goto | 2-3x |
+| 递归 + 异常 | Interpreter | 8-9x |
+| 数组访问 | Blob 加密 + C 缓冲区直读 | 17x（vs JVM JIT） |
 
-| 测试 | 结果 |
-|------|------|
-| Test #1: Basics (7项) | 全部 PASS |
-| Test #2: Reflects (8项) | 6 PASS, 2 N/A (JDK 兼容) |
-| Test #3: Calc benchmark | 393ms (baseline 35ms) |
+## 架构
 
-## 注意事项
+```
+input.jar → [解析 class] → [检测注解] → [加密常量] → [数组 blob]
+         → [nativize 方法] → [生成 C 代码] → output.jar + native_jni.c
 
-- 纯计算方法自动使用 Transpile 模式（性能超越 JIT）
-- `@NumberEncrypt` 支持 `int` / `long` / `float` / `double`，但 `<clinit>` 中的静态初始化常量不会被改写，以避免 native 库加载阶段的注册时序问题
-- 含 JNI 调用的方法使用解释器模式（约 4-17x，取决于 JNI 调用密度）
-- 字符串拼接因 StringBuilder 预缓存优化，反而比 JIT 更快
-- `<init>`、`<clinit>` 不会被 native 化
-- 需要 `-Xss4m` 以支持深度递归的 native 方法
-- Java 17+ 需要 `--enable-native-access=ALL-UNNAMED`
+native_jni.c 包含：
+├── jvm_interp.c    — Computed goto 字节码解释器
+├── transpiled 方法  — 纯 C 代码（无解释器开销）
+├── 加密表          — Feistel 加密的字符串/数字/数组 blob
+├── S-Box           — 每次构建随机生成
+├── anti-debug      — 完整性校验 + 调试器检测
+└── JNI_OnLoad      — 批量 RegisterNatives + 密钥初始化
+```
 
-## 免责声明
+## 许可
 
-本工具仅供学习研究和合法软件保护用途。使用者应确保：
-
-1. 仅对自己拥有合法权利的代码进行保护
-2. 不得将本工具用于规避软件授权验证、破解、逆向他人软件等违法行为
-3. 不得将本工具用于制作恶意软件、病毒、木马等危害计算机安全的程序
-4. 使用本工具所产生的一切后果由使用者自行承担
-
-作者不对因使用本工具造成的任何直接或间接损失承担责任。使用本工具即表示您已阅读并同意上述条款。
+私有项目，请勿分发。
